# corewar

./: CMakeLists.txt  Makefile  README.md  corewar  test  test.cor  test.s  v
corewar.dSYM/Contents/Resources/DWARF/: corewar
corewar_o.dSYM/Contents/: Info.plist
corewar_src/: bit_shift.c  bit_shift.d  check_carry.c  check_carry.d  check_comment.c  check_comment.d  check_files.c  check_files.d  check_flag.c  check_flag.d  check_live.c  check_live.d  check_m_h.c  check_m_h.d  comment_func.d  conclusion.c  conclusion.d  create_struct.c  create_struct.d  del_fun.c  del_fun.d  end_dump.c  end_dump.d  end_game.c  finish_players.c  finish_players.d  free_core.c  free_core.d  free_data.c  free_data.d  ft_calloc.c  ft_calloc.d  ft_error.c  ft_error.d  ft_lstadd.c  ft_lstadd.d  ft_lstnew.c  ft_lstnew.d  ft_memset.d  game.c  (+51 more)
includes/: asm_error.h  corewar.h  header.h  libft.h  lidft.h  op.h  oper.h  vm.h
libft_src/: del_end.c  del_end.d  del_midl.c  del_midl.d  del_start.c  del_start.d  ft_atoi.c  ft_atoi.d  ft_calloc.c  ft_calloc.d  ft_isdigit.c  ft_isdigit.d  ft_lstadd.c  ft_lstdel.d  ft_lstnew.d  ft_memcpy.d  ft_memset.c  ft_memset.d  ft_putchar.d  ft_putnbr.c  ft_putnbr.d  ft_putstr.d  ft_strcmp.c  ft_strcmp.d  ft_strequ.c  ft_strequ.d  ft_strlen.c  ft_strlen.d  ft_swap.c  ft_swap.d  print_memory.c  print_memory.d
oper_src/: carret.c  carret.d  change_pos.c  change_pos.d  check_arg.c  check_arg.d  check_reg.c  check_reg.d  def_arg.c  def_arg.d  get_arg.c  get_arg.d  get_arg_dir.c  get_arg_dir.d  get_set_pos.c  get_set_pos.d  get_third.c  get_third.d  o_add.c  o_add.d  o_aff.c  o_aff.d  o_and.c  o_and.d  o_fork.c  o_fork.d  o_ld.c  o_ld.d  o_ldi.c  o_ldi.d  o_lfork.c  o_lfork.d  o_live.c  o_live.d  o_lld.c  o_lld.d  o_lldi.c  o_lldi.d  o_or.c  o_or.d  (+29 more)
