cmake_minimum_required(VERSION 3.17)
project(cor_war C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)

add_executable(cor_war
        corewar_src/bit_shift.c
        corewar_src/check_carry.c
        corewar_src/check_comment.c
        corewar_src/check_live.c
        corewar_src/check_m_h.c
        corewar_src/conclusion.c
        corewar_src/del_fun.c
        corewar_src/end_dump.c
        corewar_src/set_players.c
        corewar_src/free_data.c
        corewar_src/ft_error.c
        corewar_src/ft_lstadd.c
        corewar_src/ft_lstnew.c
        corewar_src/game.c
        corewar_src/init_carry.c
        corewar_src/init_data.c
        corewar_src/init_vm.c
        corewar_src/main.c
        corewar_src/pars_champ.c
        corewar_src/parsing.c
        corewar_src/print_start.c
        corewar_src/valid_champ_name.c
        corewar_src/valid_dump.c
        corewar_src/valid_ex_code.c
        corewar_src/valid_exec_size.c
        corewar_src/valid_id_name.c
        corewar_src/valid_n.c
        includes/corewar.h
        includes/lidft.h
        includes/op.h
        includes/oper.h
        includes/vm.h
        libft_src/del_end.c
        libft_src/del_midl.c
        libft_src/del_start.c
        libft_src/ft_atoi.c
        libft_src/ft_calloc.c
        libft_src/ft_isdigit.c
        libft_src/ft_memcpy.c
        libft_src/ft_memset.c
        libft_src/ft_putchar.c
        libft_src/ft_putnbr.c
        libft_src/ft_putstr.c
        libft_src/ft_strcmp.c
        libft_src/ft_strequ.c
        libft_src/ft_strlen.c
        libft_src/ft_swap.c
        libft_src/print_memory.c
        oper_src/carret.c
        oper_src/relocate.c
        oper_src/check_arg.c
        oper_src/check_reg.c
        oper_src/def_arg.c
        oper_src/get_arg.c
        oper_src/get_arg_dir.c
        oper_src/get_set_pos.c
        oper_src/get_third.c
        oper_src/o_add.c
        oper_src/o_aff.c
        oper_src/o_and.c
        oper_src/o_fork.c
        oper_src/o_ld.c
        oper_src/o_ldi.c
        oper_src/o_lfork.c
        oper_src/o_live.c
        oper_src/o_lld.c
        oper_src/o_lldi.c
        oper_src/o_or.c
        oper_src/o_st.c
        oper_src/o_sti.c
        oper_src/o_sub.c
        oper_src/o_xor.c
        oper_src/o_zjmp.c
        oper_src/oper_func.c
        oper_src/plus_minus.c
        oper_src/read_1_byte.c
        oper_src/read_2_bytes.c
        oper_src/read_4_bytes.c
        oper_src/set_oper.c
        oper_src/valid_args.c
        oper_src/write_to_reg.c)
